committed with EDA plots (Lisha)

--- a/writeupLab4.tex
+++ b/writeupLab4.tex
@@ -82,7 +82,7 @@
 \title{Lab 4-Binary Classifier\\
 Stat 215A, Fall 2014}
 
-\author{Xiang (Lisha) Li}
+\author{PLEASE WRITE YXiang (Lisha) Li}
 
 \maketitle
 
@@ -91,10 +91,58 @@ Stat 215A, Fall 2014}
 Blah blah...
 
 \section{EDA}
-\subsection{Plots}
-Plot the expert labels for the presence or absence of clouds, according to a map (i.e. use the X, Ycoordinates).\\
+\subsection{Densities of the three most important features as selected by paper}
 
-Explore the relationships between the radiances of different angles, both visually and quantitatively.Do you notice differences between the two classes (cloud, no cloud) based on the radiances? Are theredifferences based on the features (CORR, NDAI, SD)?
+
+
+\begin{figure}[h]
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{NDAI1.png}
+  \caption{NDAI density Image 1}\label{}
+\endminipage\hfill
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{NDAI2.png}
+  \caption{NDAI density Image 2}\label{}
+\endminipage\hfill
+\minipage{0.32\textwidth}%
+  \includegraphics[width=\linewidth]{NDAI3.png}
+  \caption{NDAI density Image 3}\label{}
+\endminipage
+\end{figure}
+
+\begin{figure}[h]
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{SD1.png}
+  \caption{SD density Image 1}\label{}
+\endminipage\hfill
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{SD2.png}
+  \caption{SD density Image 2}\label{}
+\endminipage\hfill
+\minipage{0.32\textwidth}%
+  \includegraphics[width=\linewidth]{SD3.png}
+  \caption{SD density Image 3}\label{}
+\endminipage
+\end{figure}
+
+
+\begin{figure}[h]
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{CORR1.png}
+  \caption{CORR density Image 1}\label{}
+\endminipage\hfill
+\minipage{0.32\textwidth}
+  \includegraphics[width=\linewidth]{CORR2.png}
+  \caption{CORR density Image 2}\label{}
+\endminipage\hfill
+\minipage{0.32\textwidth}%
+  \includegraphics[width=\linewidth]{CORR3.png}
+  \caption{CORR density Image 3}\label{}
+\endminipage
+\end{figure}
+
+
+
 
 \section{Modeling}
 
