Issues with QDA

--- a/writeupLab4.tex
+++ b/writeupLab4.tex
@@ -174,7 +174,7 @@ Blah blah...
 \endminipage\hfill
 \end{figure}
 
-Cross-validation for QDA revealed that while the method works extremely well in some cases, producing AUC scores of almost 1, it sometimes fails to perform better than even the theoretical random classifier.
+Cross-validation for QDA revealed that while the method works extremely well in some cases, producing AUC scores of almost 1, it sometimes fails to perform better than even the theoretical random classifier.  In particular, the classifier does not seem to be good at discerning snow from clouds in regions where there are many dark pixels.  For example, during cross-validation, the watery bottom-left quadrant of image 2 and ridge-ridden left edge of image 3 poses significant problems to our classifiers.
 
 \subsection{Logit/Probit}
 
